# pyDFCSR

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  tags
.github/workflows/: unit-tests.yml
pyDFCSR_2D/: CSR.py  SGolay_filter.py  TODO  Untitled.ipynb  __init__.py  beams.py  debug_file.ipynb  debug_file.py  deposit.py  example.ipynb  integration.py  interfaces.py  interp1D.py  interp3D.py  interpolation.py  ipykernel_launcher.py.pclprof  lattice.py  output  params.py  physical_constants.py  plot.ipynb  plot_from_output.py  postprocessor.py  pyDFCSR_mpi_run.py  pyDFCSR_mpi_run.py.pclprof  r_gen6.py  run  submit.sh  submit_s3df.sh  tags  test.py  test.py.pclprof  test_localization.ipynb  test_localization2.ipynb  tools.py  tracking.py  twiss.py  twiss_R.py  yaml_parser.py
pyDFCSR_2D/.ipynb_checkpoints/: CSR-checkpoint.py  compare_CSRtrack_pyDFCSR-checkpoint.ipynb  compare_pyDFCSR_CSRtrack-checkpoint.ipynb  deposit-checkpoint.py  example-checkpoint.ipynb  make_beam-checkpoint.ipynb  physical_constants-checkpoint.py  plot-checkpoint.ipynb  plot_from_output-checkpoint.py  r_gen6-checkpoint.py  test_localization-checkpoint.ipynb  tools-checkpoint.py
pyDFCSR_2D/__pycache__/: interp1D.interpolate1D-14.py38.1.nbc  interp1D.interpolate1D-14.py38.2.nbc  interp1D.interpolate1D-14.py38.nbi  interp3D.interpolate3D-19.py38.1.nbc  interp3D.interpolate3D-19.py38.2.nbc  interp3D.interpolate3D-19.py38.3.nbc  interp3D.interpolate3D-19.py38.4.nbc  interp3D.interpolate3D-19.py38.nbi
pyDFCSR_2D/bmadx/: pmd_utils.py
pyDFCSR_2D/example/: bmad_pydfcsr_translation.ipynb  (+12 more)
(+77 files in other folders)
